[package]
name = "hellorust"
version = "0.1.0"
authors = ["victor <caihongwei@myhayo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.2"
chrono = "0.4"
cached = "0.23.0"

tokio = { version = "1.8", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }